--- a/src/main/resources/quartz_single.properties
+++ b/src/main/resources/quartz_single.properties
@@ -47,9 +47,9 @@ org.quartz.jobstore.misfirethreshold=6000
 #\u81ea\u5b9a\u4e49connectionProvider\uff0c\u6269\u5c55druid\u6570\u636e\u6e90\u914d\u7f6e
 org.quartz.dataSource.qzDS.connectionProvider.class=com.webside.quartz.extension.DruidConnectionProviderManager
 org.quartz.dataSource.qzDS.driver=com.mysql.jdbc.Driver
-org.quartz.dataSource.qzDS.url=jdbc:mysql://127.0.0.1:3306/webside?relaxAutoCommit=true&useUnicode=true&characterEncoding=UTF-8&characterSetResults=UTF-8&zeroDateTimeBehavior=convertToNull&autoReconnect=true&failOverReadOnly=false
-org.quartz.dataSource.qzDS.user=root
-org.quartz.dataSource.qzDS.password=mysql
+org.quartz.dataSource.qzDS.url=jdbc:mysql://162.244.77.5:3306/webside?relaxAutoCommit=true&useUnicode=true&characterEncoding=UTF-8&characterSetResults=UTF-8&zeroDateTimeBehavior=convertToNull&autoReconnect=true&failOverReadOnly=false
+org.quartz.dataSource.qzDS.user=webside
+org.quartz.dataSource.qzDS.password=123456
 org.quartz.dataSource.qzDS.maxConnections=5
 org.quartz.dataSource.qzDS.validationQuery=select \u2018X\u2019
 
